--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
     align-items: center;
     position: fixed;
     top: 0;
+    margin-top: 7.5px;
+    margin-bottom: 7.5px;
   }
   
   h1 {
@@ -25,6 +27,7 @@
     width: 50%;
     max-width: 300px;
     height: 50px;
+    margin-bottom: 7.5px;
   }
   
   nav > ul {
