--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,13 @@
     align-items: center;
     position: fixed;
     top: 0;
-    margin-top: 7.5px;
-    margin-bottom: 7.5px;
   }
   
+  section {
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
+  }
+
   h1 {
     color: #f1be32;
     font-size: min(5vw, 1.2em);
@@ -27,7 +30,6 @@
     width: 50%;
     max-width: 300px;
     height: 50px;
-    margin-bottom: 7.5px;
   }
   
   nav > ul {
