--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,16 @@
     top: 0;
   }
   
+  .Welcome {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .head {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
   section {
     margin-top: 2.5px;
     margin-bottom: 2.5px;
