--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,13 @@
   }
   
   .Welcome {
+    z-index: 2;
     padding-top: 20px;
     padding-bottom: 20px;
   }
 
   .head {
+    z-index: 1;
     padding-top: 20px;
     padding-bottom: 20px;
   }
