--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,17 @@
     align-items: center;
     position: fixed;
     top: 0;
+    margin: 0 auto;
   }
   
   .Welcome {
-    display: inline;
     z-index: 2;
+    margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
   }
 
   .head {
-    display: inline;
     z-index: 1;
     margin-top: 20px;
     margin-bottom: 20px;
