--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 50px;
     background-color: #1b1b32;
-    display: flex;
+    display: block;
     justify-content: space-between;
     align-items: center;
     position: fixed;
