--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,18 @@
     width: 100%;
     height: 50px;
     background-color: #1b1b32;
-    display: block;
+    display: inline-block;
     justify-content: space-between;
     align-items: center;
     top: 0;
-    margin: 0 auto;
+    margin: 30 auto;
   }
   
   .Welcome {
     z-index: 1;
     margin-bottom: 5px;
     border: 2px solid black;
-    display: block;
+    display: inline-block;
   }
 
   .head {
