--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,15 @@
     }
   }
   
-.about4, .about5, .about6 {
+.about4 {
+  font-weight: 100;
+}
+
+.about5 {
+  font-weight: 100;
+}
+
+.about6 {
   font-weight: 100;
 }
 
