--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,17 @@
   
   #about4 {
   font-weight: normal;
-  font-size: min(5vw, 1.2em);
+  font-size: 1.8rem;
   }
 
   #about5 {
   font-weight: 100;
-  font-size: min(5vw, 1.2em);
+  font-size: 1.8rem;
   }
 
   #about6 {
   font-weight: 100;
-  font-size: min(5vw, 1.2em);
+  font-size: 1.8rem;
   }
 
   header {
