--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@
   }
 
   .Welcome {
-    z-index: 1;
     margin-bottom: 5px;
     border: 2px solid black;
     display: inline-block;
@@ -45,15 +44,13 @@
   }
 
   .head {
-    z-index: 1;
     margin-top: 20px;
     margin-bottom: 20px;
-    font-family: Helvetica;
   }
 
   h1 {
     color: #f1be32;
-    font-size: min(5vw, 1.2em);
+    font-size: 2.8rem;
     text-align: center;
   }
   
