--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     }
   }
   
+  #welc-about1 {
+    font-size: 2.8rem;
+  }
+
   #about4 {
   font-weight: normal;
   font-size: 1rem;
@@ -50,7 +54,7 @@
 
   h1 {
     color: #f1be32;
-    font-size: 2.8rem;
+    font-size: 2rem;
     text-align: center;
   }
   
