--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@
     font-size: 2.8rem;
   }
 
+  #about2 {
+    font-weight: normal;
+    font-size: 1rem;
+  }
+
   #about4 {
   font-weight: normal;
   font-size: 1rem;
