--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
   #about2 {
     font-weight: normal;
     font-size: 1rem;
+    text-align: center;
+    justify-content: center;
   }
 
   #about4 {
