--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
     font-size: 2.8rem;
   }
 
+  #about21 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
   #about2 {
     font-weight: normal;
     font-size: 1rem;
