--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,10 @@
   font-size: 1rem;
   }
 
+  #welcome-section {
+    align-items: center;
+  }
+
   header {
     width: 100%;
     height: 50px;
