--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@
 
   header {
     width: 100%;
-    height: 50px;
+    height: 75px;
     background-color: #1b1b32;
     display: inline-block;
     justify-content: space-between;
@@ -72,6 +72,20 @@
     text-align: center;
   }
   
+  .skills {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .skills_skill {
+    font-size: 1rem;
+    font-weight: 600;
+    background: rgba(153, 153, 153, .2);
+    color: #666;
+    height: 10px;
+    width: 17px;
+  }
+
   nav {
     width: 50%;
     max-width: 300px;
