--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
   
   #welc-about1 {
     font-size: 2.8rem;
+    text-align: center;
+    justify-content: center;
+  }
+
+  #welc-about1 {
+    text-align: center;
+    justify-content: center;
   }
 
   #about1 {
