--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     justify-content: center;
   }
 
-  #welc-about1 {
+  #welc-about {
     text-align: center;
     justify-content: center;
   }
