--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@
     width: 17px;
     border-radius: 5px;
     box-sizing: border-box;
-    padding: 1px, 2px;
-    position:absolute;
+    padding: 10px, 10px;
+    position:relative;
   }
 
   nav {
