--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@
     border-radius: 5px;
     box-sizing: border-box;
     padding: 10px, 10px;
-    position:relative;
+    position:absolute;
   }
 
   nav {
