--- a/styles.css
+++ b/styles.css
@@ -94,12 +94,14 @@
     font-weight: 600;
     background: rgba(153, 153, 153, .2);
     color: #666;
-    height: 10px;
-    width: 17px;
     border-radius: 5px;
     box-sizing: border-box;
     padding: 10px, 10px;
     position:absolute;
+    height: 10px;
+    width: 20px;
+    justify-content: center;
+    align-items: center;
   }
 
   nav {
