--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@
 
   .skills {
     display: flex;
+    border: 2px solid black;
   }
 
   .skills_skill {
@@ -100,6 +101,7 @@
     width: 20px;
     justify-content: center;
     align-items: center;
+    border: 2px solid black;
   }
 
   nav {
