--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@
     padding: 10px, 10px;
     height: 10px;
     width: 20px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border: 2px solid black;
   }
