--- a/styles.css
+++ b/styles.css
@@ -86,8 +86,9 @@
 
   .skills {
     display: flex;
+    
     border: 2px solid red;
-    max-height: 800px
+    justify-content: space-between;
   }
 
   .skills_skill {
@@ -97,12 +98,13 @@
     color: #666;
     border-radius: 5px;
     box-sizing: border-box;
-    padding: 10px, 10px;
-    height: 10px;
-    width: 20px;
+    margin: 20px;
+    min-height: 40px;
+    width: 800px;
     justify-content: space-between;
     align-items: center;
     border: 2px solid black;
+    background-color: blueviolet;
   }
 
   nav {
