--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@
 
   .skills {
     display: flex;
-    
+    flex-wrap: wrap;
     border: 2px solid red;
     justify-content: space-between;
   }
@@ -100,7 +100,7 @@
     box-sizing: border-box;
     margin: 20px;
     min-height: 40px;
-    width: 800px;
+    width: 80px;
     justify-content: space-between;
     align-items: center;
     border: 2px solid black;
