--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@
   .skills_skill {
     font-size: 1rem;
     font-weight: 600;
-    background: rgba(153, 153, 153, .2);
+    color: #f1be32;
     color: #666;
     border-radius: 5px;
     box-sizing: border-box;
