--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,10 @@
     background-color: blueviolet;
   }
 
+  .skills_skill:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
   nav {
     width: 50%;
     max-width: 300px;
