--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@
   .skills_skill {
     font-size: 1rem;
     font-weight: 600;
-    color: #f1be32;
+    color: lightgray;
     border-radius: 5px;
     box-sizing: border-box;
     margin: 20px;
@@ -108,6 +108,20 @@
 
   .skills_skill:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
+  .contact-button {
+    border: 2px solid black;
+    margin: 20px;
+    min-height: 40px;
+    min-width: 100px;
+    color: black;
+    background-color: lightgray;
+  }
+
+  .contact-button:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    cursor: pointer;
   }
 
   nav {
