--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
     margin: 20px;
     min-height: 40px;
     width: 80px;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border: 2px solid black;
     background-color: lightgray;
