--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@
     border-radius: 5px;
     box-sizing: border-box;
     margin: 20px;
+    padding: 5px;
     min-height: 40px;
     min-width: 50px;
     justify-content: start;
