--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
 
   #welcome-section {
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   header {
