--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@
     margin: 5px;
     border: 2px solid black;
     font-family: 'Georgia', Georgia, serif;
+    min-height: 300px;
+    max-height: 1000px;
   }
 
   header {
