--- a/styles.css
+++ b/styles.css
@@ -117,11 +117,12 @@
 
   .contact-button {
     border: 2px solid black;
-    margin: 20px;
+    margin: 20px 20px 20px 5px;
     min-height: 40px;
     min-width: 100px;
     color: black;
     background-color: #f1be32;
+    border-radius: 7.5px;
   }
 
   .contact-button:hover {
