--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
     margin: 5px;
     border: 2px solid black;
     font-family: 'Georgia', Georgia, serif;
-    min-height: 300px;
+    min-height: 1000px;
     max-height: 2000px;
   }
 
@@ -132,6 +132,11 @@
 
   .abouts {
     margin: 10px;
+  }
+
+  .copyright {
+    justify-content: center;
+    padding-bottom: 10px;
   }
 
   nav {
