--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
-    padding: 20px;
+    padding: 8px 50px;
   }
 
   .contact-button:hover {
