--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@
 
   .project-1-container {
     min-height: 200px;
+    min-width: 51%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
@@ -108,6 +109,7 @@
 
   .project-2-container {
     min-height: 200px;
+    min-width: 51%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
@@ -115,6 +117,7 @@
 
   .project-3-container {
     min-height: 200px;
+    min-width: 51%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
@@ -122,6 +125,7 @@
 
   .project-4-container {
     min-height: 200px;
+    min-width: 51%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
@@ -129,6 +133,7 @@
 
   .project-5-container {
     min-height: 200px;
+    min-width: 51%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
