--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@
   }
 
   .project-1-container {
+    justify-content: center;
     align-items: center;
     min-height: 200px;
     min-width: 51%;
@@ -103,6 +104,7 @@
   }
 
   .project-2-container {
+    justify-content: center;
     align-items: center;
     min-height: 200px;
     min-width: 51%;
@@ -112,6 +114,7 @@
   }
 
   .project-3-container {
+    justify-content: center;
     align-items: center;
     min-height: 200px;
     min-width: 51%;
@@ -121,6 +124,7 @@
   }
 
   .project-4-container {
+    justify-content: center;
     align-items: center;
     min-height: 200px;
     min-width: 51%;
@@ -130,6 +134,7 @@
   }
 
   .project-5-container {
+    justify-content: center;
     align-items: center;
     min-height: 200px;
     min-width: 51%;
