--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,22 @@
     border: 2px solid black;
   }
 
+  .p2p {
+    border: 2px solid black;
+  }
+
+  .p3p {
+    border: 2px solid black;
+  }
+
+  .p4p {
+    border: 2px solid black;
+  }
+
+  .p5p {
+    border: 2px solid black;
+  }
+
   .skills {
     display: flex;
     flex-wrap: wrap;
