--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
   }
 
+  section {
+    display: block;
+    padding: 8rem 0;
+  }
+
   #welc-about1 {
     font-size: 2.8rem;
     text-align: center;
