--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,10 @@
     text-align: center;
   }
 
+  .projects {
+    padding: 0 50px;
+  }
+
   .about-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
