--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,8 @@
     text-align: center;
   }
 
-  .projects {
-    padding: 0 200px;
+  #projects {
+    padding: 0 50px;
   }
 
   .about-section {
