--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@
     padding: 8rem 0;
   }
 
+  #welcome-button {
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+  }
+
   #welc-about1 {
     font-size: 2.8rem;
     text-align: center;
