--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,10 @@
   }
 
   #welc-about1 {
-    font-size: 2.8rem;
+    font-size: 4.0rem;
     text-align: center;
     justify-content: center;
+    line-height: 1.0;
   }
 
   #welc-about {
