--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    display: inline-block;
+    position: relative;
   }
 
   #welc-about1 {
