--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@
     font-family: 'Georgia', Georgia, serif;
     min-height: 300px;
     max-height: 2000px;
-    padding: 8rem 0;
+    padding: 8rem 5rem;
   }
 
   header {
