--- a/styles.css
+++ b/styles.css
@@ -35,13 +35,15 @@
     font-size: 1.3rem;
     justify-content: center;
     text-align: center;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
+    line-height: 1.0;
   }
 
   #about1 {
     text-align: center;
     justify-content: center;
     align-items: center;
+    line-height: 1.0;
   }
 
   #about2 {
@@ -50,21 +52,25 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    line-height: 1.0;
   }
 
   #about4 {
   font-weight: normal;
   font-size: 1.2rem;
+  line-height: 1.0;
   }
 
   #about5 {
   font-weight: 100;
   font-size: 1.2rem;
+  line-height: 1.0;
   }
 
   #about6 {
   font-weight: 100;
   font-size: 1.2rem;
+  line-height: 1.0;
   }
 
   #welcome-section {
