--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@
     justify-content: center;
     text-align: center;
     border: 2px solid black;
-    font-family: 'Georgia', Georgia, serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     min-height: 300px;
     max-height: 2000px;
     padding: 8rem 5rem;
