--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,14 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
+  #about3 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
   #about4 {
   font-weight: normal;
   font-size: 1.2rem;
