--- a/styles.css
+++ b/styles.css
@@ -107,9 +107,10 @@
     background-color: #1b1b32;
     display: inline-block;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     top: 0;
     margin: 0 auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .About-mee {
