--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@
   }
 
   #about1 {
-    font-weight: normal;
+    font-weight: strong;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -63,7 +63,7 @@
   }
 
   #about3 {
-    font-weight: normal;
+    font-weight: strong;
     text-align: center;
     justify-content: center;
     align-items: center;
