--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,11 @@
   }
 
   .barz {
-    width: 1.5rem;
-    height: .25rem;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    width: 2.5rem;
+    height: .5rem;
     background-color: lightskyblue;
   }
 
