--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,17 @@
     width: 2.5rem;
     height: .5rem;
     background-color: lightskyblue;
+    position: relative;
+  }
+
+  .bar {
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    width: 8.0rem;
+    height: .15rem;
+    background-color: white;
+    position: relative;
   }
 
   #welc-about {
