--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,11 @@
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    width: 2.5rem;
-    height: .5rem;
+    min-width: 2.5rem;
+    min-height: .5rem;
     background-color: lightskyblue;
-    position: relative;
-    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .bar {
@@ -52,8 +52,8 @@
     width: 8.0rem;
     height: .05rem;
     background-color: white;
-    position: relative;
-    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #welc-about {
