--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    min-width: 2.5rem;
+    min-width: 1.0rem;
     min-height: .5rem;
     background-color: lightskyblue;
     margin-left: auto;
@@ -160,7 +160,7 @@
   }
 
   h1 {
-    color: #f1be32;
+    color: lightskyblue;
     font-size: 2rem;
     text-align: center;
   }
@@ -253,7 +253,7 @@
   .skills {
     display: flex;
     flex-wrap: wrap;
-    border: 2px solid red;
+    border: 2px solid lightskyblue;
     margin: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -288,7 +288,7 @@
     min-height: 80px;
     min-width: 100px;
     color: black;
-    background-color: #f1be32;
+    background-color: lightskyblue;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
