--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
     border-radius: 5px;
     min-width: 1.0rem;
     min-height: .5rem;
-    background-color: lightskyblue;
+    background-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 36%, rgba(0,212,255,1) 100%);;
     margin-left: auto;
     margin-right: auto;
   }
@@ -160,7 +160,7 @@
   }
 
   h1 {
-    color: lightskyblue;
+    color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 36%, rgba(0,212,255,1) 100%);;
     font-size: 2rem;
     text-align: center;
   }
@@ -253,7 +253,7 @@
   .skills {
     display: flex;
     flex-wrap: wrap;
-    border: 2px solid lightskyblue;
+    border: 2px solid linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 36%, rgba(0,212,255,1) 100%);;
     margin: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -288,7 +288,7 @@
     min-height: 80px;
     min-width: 100px;
     color: black;
-    background-color: lightskyblue;
+    background-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 36%, rgba(0,212,255,1) 100%);;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
