--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
   }
 
   #welcome-button {
+    background-image: linear-gradient(to bottom right, red, yellow);
     text-align: center;
     align-items: center;
     justify-content: center;
