--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   }
 
   #welcome-button {
-    background-image: linear-gradient(to bottom right, red, yellow);
+    background-image: linear-gradient(to bottom right, blue, white);
     text-align: center;
     align-items: center;
     justify-content: center;
