--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@
   }
 
   #welc-about1 {
+    color: #1b1b44
     font-size: 3.5rem;
     text-align: center;
     justify-content: center;
@@ -134,7 +135,7 @@
   header {
     width: 100%;
     height: 75px;
-    background-color: #1b1b32;
+    background-color: #1b1b44;
     display: inline-block;
     justify-content: center;
     align-items: end;
@@ -340,6 +341,7 @@
   }
   
   nav > ul > li:hover {
+    border-radius: 5px;
     background-color: #dfdfe2;
     color: #1b1b32;
     cursor: pointer;
