--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   }
 
   #welc-about1 {
-    color: #1b1b44
+    color: #1b1b44;
     font-size: 3.5rem;
     text-align: center;
     justify-content: center;
