--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,9 @@
     border: 2px solid black;
     margin: 20px 20px 20px 5px;
     min-height: 80px;
+    max-height: 80px;
     min-width: 100px;
+    max-width: 100px;
     color: black;
     background-color: lightblue;
     border-radius: 7.5px;
