--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
     justify-content: center;
     border-radius: 5px;
     min-width: 1.0rem;
-    max-width: 4rem;
+    max-width: 8rem;
     min-height: .5rem;
     background-color: #1b1b44;
     margin-left: auto;
@@ -54,11 +54,13 @@
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    width: 8.0rem;
+    min-width: 8.0rem;
+    max-width: 20rem;
     height: .05rem;
     background-color: white;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    
   }
 
   #welc-about {
