--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@
     max-width: 20rem;
     height: .05rem;
     background-color: white;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    margin-left: auto;
+    margin-right: auto;
     
   }
 
