--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
   #welcome-button {
     background-image: lightblue;
     display: inline-block;
+    max-height: 2rem;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -300,7 +301,7 @@
     border: 2px solid black;
     margin: 20px 20px 20px 5px;
     min-height: 80px;
-    max-height: 100px;
+    max-height: 2rem;
     min-width: 100px;
     max-width: 200px;
     color: black;
