--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 
   #welcome-button {
     background-image: lightblue;
-    display: inline-block;
+    display: block;
     max-height: 20px;
     text-align: center;
     align-items: center;
