--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,12 @@
   #welcome-button {
     background-image: lightblue;
     display: flex;
-    max-height: 20px;
+    max-height: 10px;
     text-align: center;
     align-items: center;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
