--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
     background-image: lightblue;
     display: flex;
     max-height: 10px;
+    overflow: hidden;
     text-align: center;
     align-items: center;
     justify-content: center;
