--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,10 @@
 
   #welcome-button {
     background-image: lightblue;
-    max-height: 10px;
-    overflow: hidden;
     text-align: center;
     align-items: center;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
@@ -298,11 +295,10 @@
   }
 
   .contact-button {
-    display: inline-block;
     border: 2px solid black;
     margin: 20px 20px 20px 5px;
     min-height: 80px;
-    max-height: 1rem;
+    max-height: 100px;
     min-width: 100px;
     max-width: 200px;
     color: black;
