--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,18 @@
   }
 
   #welcome-button {
-    background-image: lightblue;
+    border: 2px solid black;
+    margin: 20px 20px 20px 5px;
+    min-height: 80px;
+    max-height: 100px;
+    min-width: 100px;
+    max-width: 200px;
+    color: black;
+    background-color: lightblue;
+    border-radius: 7.5px;
     text-align: center;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.2rem;
+    padding: 8px 50px;
   }
 
 
@@ -296,11 +302,17 @@
 
   .contact-button {
     border: 2px solid black;
+    margin: 20px 20px 20px 5px;
+    min-height: 80px;
+    max-height: 100px;
+    min-width: 100px;
+    max-width: 200px;
     color: black;
     background-color: lightblue;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
+    padding: 8px 50px;
   }
 
   .contact-button:hover {
