--- a/styles.css
+++ b/styles.css
@@ -301,6 +301,7 @@
   }
 
   .contact-button {
+    white-space: nowrap;
     border: 2px solid black;
     margin: 20px 20px 20px 5px;
     min-height: 80px;
