--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   }
 
   .form {
+    padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
   }
