--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     }
   }
 
+  .contact-paragraph {
+    padding-bottom: 2rem;
+  }
+
   .form {
     padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
