--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   }
 
   .name-label {
+    margin-top: 1rem;
     font-weight: 700;
     letter-spacing: 1px;
     margin-bottom: 1rem;
@@ -26,9 +27,11 @@
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
+    min-width: 10rem;
   }
 
   .email-label {
+    margin-top: 1rem;
     font-weight: 700;
     letter-spacing: 1px;
     margin-bottom: 1rem;
@@ -37,6 +40,7 @@
   }
 
   .email-input {
+    min-width: 10rem;
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
@@ -45,6 +49,7 @@
   .message-label {
     font-weight: 700;
     letter-spacing: 1px;
+    margin-top: 1rem;
     margin-bottom: 1rem;
     display: block;
     text-align: left;
@@ -54,6 +59,7 @@
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
+    min-width: 10rem;
   }
 
   section {
