--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
-    min-width: 10rem;
+    width: 10rem;
   }
 
   .email-label {
