--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,7 @@
   .name-input {
     font-weight: 600;
     border-radius: 5px;
-    padding: 2rem;
-    margin-right: 10rem;
+    padding: 2rem 2rem 0rem 10rem;
     width: 100%;
   }
 
