--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@
   }
 
   .name-input {
+    justify-content: center;
+    text-align: left;
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem 2rem 0rem 20rem;
