--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,7 @@
   }
 
   .name-input {
-    justify-content: center;
-    text-align: left;
+    text-align: start;
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem 2rem 0rem 20rem;
