--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@
   }
 
   .name-input {
-    padding: 2rem auto;
+    display: flex;
+    padding: 2rem 0;
     text-align: start;
     font-weight: 600;
     border-radius: 5px;
@@ -170,14 +171,14 @@
   }
 
   #about5 {
-    font-weight: normal;
+  font-weight: normal;
   font-size: 1.2rem;
   line-height: 1.5;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   #about6 {
-    font-weight: normal;
+  font-weight: normal;
   font-size: 1.2rem;
   line-height: 1.5;
   padding-bottom: 1rem;
