--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
   .name-input {
     width: 100%;
     display: flex;
-    padding: 2rem 0;
+    padding: 2rem 2rem 2rem 0;
     text-align: start;
     font-weight: 600;
     border-radius: 5px;
