--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
   .name-input {
     width: 100%;
     display: flex;
-    padding: 2rem 2rem 2rem 0;
+    padding: 2rem 2rem 0 2rem;
     text-align: start;
     font-weight: 600;
     border-radius: 5px;
@@ -42,7 +42,8 @@
   }
 
   .email-input {
-    min-width: 10rem;
+    width: 100%;
+    display: flex;
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
@@ -61,7 +62,8 @@
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
-    min-width: 10rem;
+    width: 100%;
+    display: flex;
   }
 
   section {
