--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
   .name-input {
     width: 90%;
     display: flex;
-    padding: 1.5rem 1.5rem 0 2rem;
+    padding: 1.5rem 1.5rem 0 0;
     font-weight: 600;
     border-radius: 5px;
   }
