--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 
   .name-input {
     width: 90%;
-    padding: 1.5rem 0 1.5rem 0;
+    padding: 2rem;
     font-weight: 600;
     border-radius: 5px;
   }
