--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,22 @@
     text-align: left;
   }
 
+  .submit-button {
+    white-space: nowrap;
+    border: 2px solid black;
+    margin: 20px 20px 20px 5px;
+    min-height: 80px;
+    max-height: 100px;
+    min-width: 100px;
+    max-width: 200px;
+    color: black;
+    background-color: lightblue;
+    border-radius: 7.5px;
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 8px 50px;
+  }
+
   .email-input {
     width: 85%;
     display: flex;
