--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,10 @@
     white-space: nowrap;
     border: 2px solid black;
     margin: 20px 20px 20px 5px;
-    min-height: 10px;
+    min-height: 60px;
     max-height: 300px;
-    min-width: 10px;
-    max-width: 400px;
+    min-width: 85%;
+    max-width: 10000px;
     color: black;
     background-color: lightblue;
     border-radius: 7.5px;
