--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
     margin: 20px 20px 20px 5px;
     min-height: 60px;
     max-height: 300px;
-    min-width: 85%;
+    min-width: 95%;
     max-width: 10000px;
     color: black;
     background-color: lightblue;
@@ -54,6 +54,7 @@
     font-size: 1.2rem;
     padding: 8px 50px;
     display: block;
+    margin-top: 1rem;
   }
 
   .email-input {
