--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,10 @@
   .submit-button {
     white-space: nowrap;
     border: 2px solid black;
-    margin: 20px 20px 20px 5px;
+    margin: 1.5rem 20px 20px 5px;
     min-height: 60px;
     max-height: 300px;
-    min-width: 100%;
+    min-width: 95%;
     max-width: 10000px;
     color: black;
     background-color: lightblue;
