--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   }
 
   .form {
+    background-color: lightgray;
     padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
@@ -368,7 +369,7 @@
   }
 
   .contact {
-    background-color: lightgray;
+    background-image: linear-gradient(to bottom right, blue, white);
   }
 
   .contact-button {
