--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   }
 
   .form {
-    background-color: lightgray;
+    background-color: white;
     padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
