--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   }
 
   .form {
+    border-radius: 1px;
     background-color: white;
     padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
