--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
     padding: 2rem;
     font-weight: 600;
     border-radius: 5px;
+    background: rgb(69, 106, 216);
   }
 
   .email-label {
@@ -64,6 +65,7 @@
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
+    background: rgb(69, 106, 216);
   }
 
   .message-label {
@@ -79,7 +81,8 @@
     font-weight: 600;
     border-radius: 5px;
     padding: 2rem;
-    width: 85%
+    width: 85%;
+    background: rgb(69, 106, 216);
   }
 
   section {
