--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@
     min-width: 100px;
     max-width: 200px;
     color: black;
-    background-color: rgb(0, 6, 164);
+    background-color: blue;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
