--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
     min-width: 95%;
     max-width: 10000px;
     color: black;
-    background-color: lightblue;
+    background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
@@ -385,7 +385,7 @@
     min-width: 100px;
     max-width: 200px;
     color: black;
-    background-color: lightblue;
+    background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
