--- a/styles.css
+++ b/styles.css
@@ -420,6 +420,7 @@
     justify-content: center;
     text-align: center;
     padding-bottom: 10px;
+    padding-top: 10px;
     font-size: .9rem;
   }
 
