--- a/styles.css
+++ b/styles.css
@@ -134,12 +134,13 @@
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    min-width: 6.0rem;
+    min-width: 2.0rem;
     max-width: 10rem;
     min-height: .5rem;
     background-color: rgba(65, 109, 243, 0.305);;
     margin-left: auto;
     margin-right: auto;
+    border-color: black;
   }
 
   .bar {
