--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@
   }
 
   .submit-button {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     white-space: nowrap;
@@ -103,6 +104,7 @@
   }
 
   #welcome-button {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 2px solid black;
@@ -421,6 +423,7 @@
   }
 
   .contact-button {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     white-space: nowrap;
