--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@
   }
 
   .submit-button {
+    text-decoration: none;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
@@ -105,6 +106,7 @@
   }
 
   #welcome-button {
+    text-decoration: none;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
@@ -425,6 +427,7 @@
   }
 
   .contact-button {
+    text-decoration: none;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
