--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@
     min-width: 2.0rem;
     max-width: 10rem;
     min-height: .5rem;
-    background-color: rgba(65, 109, 243, 0.305);;
+    background-color: rgba(65, 109, 243, 0.305);
     margin-left: auto;
     margin-right: auto;
     border: 2px solid black;
@@ -307,8 +307,6 @@
     grid-gap: 1rem;
   }
 
-
-
   .project-1-container {
     justify-content: center;
     text-align: center;
@@ -404,7 +402,7 @@
     min-width: 50px;
     justify-content: start;
     align-items: center;
-    border: 2px solid black;
+    border: 2px solid rgba(65, 109, 243, 0.305);
     background-color: lightgray;
   }
 
