--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,8 @@
   }
 
   .submit-button {
+    letter-spacing: 1px;
+    text-transform: uppercase;
     text-decoration: none;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -61,7 +63,7 @@
     max-height: 300px;
     min-width: 95%;
     max-width: 10000px;
-    color: black;
+    color: white;
     background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
@@ -106,6 +108,8 @@
   }
 
   #welcome-button {
+    letter-spacing: 1px;
+    text-transform: uppercase;
     text-decoration: none;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -117,7 +121,7 @@
     max-height: 100px;
     min-width: 100px;
     max-width: 200px;
-    color: black;
+    color: white;
     background-color: blue;
     border-radius: 7.5px;
     text-align: center;
@@ -425,6 +429,8 @@
   }
 
   .contact-button {
+    letter-spacing: 1px;
+    text-transform: uppercase;
     text-decoration: none;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -437,7 +443,7 @@
     max-height: 100px;
     min-width: 100px;
     max-width: 200px;
-    color: black;
+    color: white;
     background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
