--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
-    transition: transform .3s;
+    transform: translate(0, .5rem);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
