--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,10 @@
     display: block;
   }
 
+  .submit-button:hover {
+    transform: translate(0, 1rem);
+  }
+
   .email-input {
     width: 85%;
     display: flex;
@@ -129,7 +133,9 @@
     padding: 8px 50px;
   }
 
-
+  #welcome-button {
+    transform: translate(0, 1rem);
+  }
 
   #welc-about1 {
     color: #1b1b44;
@@ -449,6 +455,10 @@
     text-align: center;
     font-size: 1.2rem;
     padding: 8px 50px;
+  }
+
+  .contact-button:hover {
+    transform: translate(0, 1rem);
   }
 
   .contact-button:hover {
