--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,11 @@
   }
 
   .contact-button {
+    transition: transform .3s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    transition-property: transform;
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
@@ -458,7 +463,7 @@
   .contact-button:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
-    transform: translate(0, 50px);
+    transform: translateY(-3px);
   }
 
   .abouts {
