--- a/styles.css
+++ b/styles.css
@@ -452,6 +452,7 @@
     background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
+    display: inline-block;
     font-size: 1.2rem;
     padding: 8px 50px;
   }
@@ -459,7 +460,7 @@
   .contact-button:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
-    transform: translateY(10px);
+    transform: translateY(-10px);
   }
 
   .abouts {
