--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,10 @@
   }
 
   #welcome-button {
+    min-height: 60px;
+    max-height: 300px;
+    min-width: 20%;
+    max-width: 10000px;
     display: inline-block;
     transition-duration: 0.3s;
     letter-spacing: 1px;
@@ -433,6 +437,10 @@
   }
 
   .contact-button {
+    min-height: 60px;
+    max-height: 300px;
+    min-width: 20%;
+    max-width: 10000px;
     transition-duration: 0.3s;
     letter-spacing: 1px;
     text-transform: uppercase;
