--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@
     max-height: 300px;
     min-width: 20%;
     max-width: 10000px;
-    display: inline-block;
+    display: block;
     transition-duration: 0.3s;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -459,7 +459,7 @@
     background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
-    display: inline-block;
+    display: block;
     font-size: 1.2rem;
     padding: 8px 50px;
   }
