--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@
     min-height: 15px;
     max-height: 300px;
     min-width: 5%;
-    max-width: 10000px;
+    max-width: 10%;
     display: block;
     align-items: center;
     justify-content: center;
