--- a/styles.css
+++ b/styles.css
@@ -122,13 +122,12 @@
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 2px solid black;
-    margin: 20px 20px 20px 5px;
     color: white;
     background-color: blue;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
-    padding: 8px 50px;
+    padding: 8px auto;
   }
 
   #welcome-button {
