--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
-    padding: 8px auto;
+    padding: 8px 5rem 8px 5rem;
   }
 
   #welcome-button {
