--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
+    position: relative;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -127,7 +128,7 @@
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
-    padding: 8px 5rem 8px 5rem;
+    padding: 8px auto;
   }
 
   #welcome-button {
