--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@
     max-height: 300px;
     min-width: 35%;
     max-width: 35%;
-    padding: 8px auto;
+    padding: 1rem auto;
     align-items: center;
     justify-content: center;
     transition-duration: 0.3s;
