--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
-    
+    margin: auto;
   }
 
   #welcome-button:hover {
