--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@
     max-height: 300px;
     min-width: 35%;
     max-width: 40%;
-    padding: 1rem auto;
+    padding: .25rem auto;
     vertical-align: middle;
     align-items: center;
     justify-content: center;
