--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,8 @@
     min-width: 35%;
     max-width: 40%;
     padding: .25rem auto;
-    margin-left: 4rem;
-    margin-right: 4rem;
+    margin-left: 49%;
+    margin-right: 49%;
     vertical-align: middle;
     align-items: center;
     justify-content: center;
