--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
-  html main {
+  html {
     margin: 0;
     padding: 0;
   }
