project section update

--- a/styles.css
+++ b/styles.css
@@ -399,7 +399,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: url('https://illustoon.com/photo/dl/11331.png');
+    background-image: na;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
